cmake_minimum_required(VERSION 2.8)
project(HEXTURNBASED)

add_subdirectory(TheGameEngineProject/TheGameEngineProject)
add_subdirectory(Libraries/SDL2/include)
add_subdirectory(Libraries/SDL2_image-2.0.0/include)
add_subdirectory(Libraries/SDL2_mixer-2.0.0/include)
add_subdirectory(Libraries/SDL2_ttf-2.0.12/include)